4.5 -> 5.0:
    - jbj: refactor headerVerifyInfo().
    - jbj: pour the amber over the corpse of the rpmlead. Ptooey! R.I.P.
    - jbj: stub in rpmpkgFoo() i/o methods.
    - jbj: refactor rpmlead I/O routines into rpmdb/pkgio.c.
    - jbj: protect rpmdb contents from cluelesser morons.
    - jbj: add sourcepkgid index and permit queries of the (non-existent) tag.
    - rpm.org: permit mire RE's against binary data. Useless ... (#277161).
    - rpm.org: mire RE against missing data now mis-matches rather than matches.
    - jbj: remove ancient %verifyscript tag != 1079 retrofit.
    - rpm.org: fix whitespace-in-files issues in find-debuginfo.sh.
    - rpm.org: new debuginfo script.
    - jbj: update known arch's.
    - jbj: use rpmGetPath() to simplify generating filenames, nuke alloca.
    - jbj: pubkey headers were misidentified as source, not binary, headers.
    - rpm.org: report open error on signing explicitly (#155079).
    - rpm.org: fix for debugedit -l.
    - afb: handle Mac OS X 10.3.9 statvfs deviance.
    - rse: make devtool %standalone fully modular for allowing its modules to be reused in other devtool targets
    - jbj: assume that mount(2) et al are linux-peculier for the moment.
    - jbj: add rpmio Mount/Umount/Umount2 stubs.
    - jbj: permit keyutils caching disable, don't re-add if already cached.
    - jbj: use keyutils for pubkey cache.
    - jbj: update id.po (Translation Project).
    - jbj: teach --querytags to chain through headerCompoundFormats.
    - rse: apply upstream vendor Lua 5.1.2 patches 1-7
    - rse: add support for building against NEON >= 0.27.0
    - jbj: use keyutils to get password out of rpm's address space.
    - jbj: start ripping availablePackages.
    - jbj: rpmtsDbmode() and rpmtsSetDbmode() added for rpmts-py.c opaqueness.
    - jbj: start marking availablePackages for destruction.
    - jbj: make a pass checking rpmts opaqueness.
    - jbj: rpmtsGoal() and rpmtsSetGoal() added.